working pub sub

--- a/src/nodecomx_cpp_py/CMakeLists.txt
+++ b/src/nodecomx_cpp_py/CMakeLists.txt
@@ -1,29 +1,38 @@
 cmake_minimum_required(VERSION 3.8)
 project(nodecomx_cpp_py)
 
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(ament_cmake_python REQUIRED)
+find_package(ament_cmake_python REQUIRED) # Python
 find_package(rclcpp REQUIRED)
-find_package(rclpy REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclpy REQUIRED)              # Python
+find_package(std_msgs REQUIRED)
 
 # Include Cpp "include" directory
+# include_directories(include; ${example_interfaces_INCLUDE_DIRS})
 include_directories(include)
 
-# Create Cpp executable
-add_executable(cpp_executable src/cpp_node.cpp)
-ament_target_dependencies(cpp_executable rclcpp)
+# Create Subscriber executable
+add_executable(subscriberEvo src/subscriber_node.cpp)
+ament_target_dependencies(subscriberEvo rclcpp std_msgs)
+
+# Create Publisher executable
+add_executable(publisherEvo src/publisher_node.cpp)
+ament_target_dependencies(publisherEvo rclcpp std_msgs)
 
 # Install Cpp executables
 install(TARGETS
-  cpp_executable
+  subscriberEvo
+  publisherEvo
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -36,16 +45,5 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
-# if(BUILD_TESTING)
-  # find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  # set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  # set(ament_cmake_cpplint_FOUND TRUE)
-  # ament_lint_auto_find_test_dependencies()
-# endif()
 
 ament_package()
